--- a/notebook-web/src/main/resources/templates/_layout.html
+++ b/notebook-web/src/main/resources/templates/_layout.html
@@ -8,8 +8,15 @@
 
 </head>
 <body>
-<header>
-
+<header class="py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col text-right">
+                <a class="btn btn-primary" href="/logout" sec:authorize="isAuthenticated()" >Logout</a>
+                <a class="btn btn-primary" href="/login" sec:authorize="!isAuthenticated()" >Log In</a>
+            </div>
+        </div>
+    </div>
 </header>
 <main>
     <div class="container mt-5">
