--- a/notebook-app/src/main/resources/templates/login.html
+++ b/notebook-app/src/main/resources/templates/login.html
@@ -6,19 +6,29 @@
 <body>
 <!-- /* Content of this page will be decorated by the elements of layout.html (task/layout) */ -->
 <div layout:fragment="content">
-    <div class="row">
-        <div class="col">
+    <div class="row justify-content-center">
+        <div class="col-sm-8 col-md-4">
             <div th:if="${param.error}">
                 Invalid username and password.
             </div>
             <div th:if="${param.logout}">
                 You have been logged out.
             </div>
-            <form th:action="@{/login}" method="post">
-                <div><label> User Name : <input type="text" name="username"/> </label></div>
-                <div><label> Password: <input type="password" name="password"/> </label></div>
-                <div><input type="submit" value="Sign In"/></div>
-            </form>
+            <div class="card py-3 px-4">
+                <form th:action="@{/login}" method="post">
+                    <div class="form-group">
+                        <label for="username"> User Name :</label>
+                        <input id="username" type="text" class="form-control" name="username"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="password"> Password:</label>
+                        <input id="password" type="password" class="form-control" name="password"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" value="Sign In"/>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
